--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -51,8 +51,15 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
+    "prettier": "3.4.2",
     "protons": "^7.6.0",
     "tailwindcss": "^3.4.3",
     "typescript": "5.4.5"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "printWidth": 120
   }
 }
