--- a/.github/workflows/js-peer.yml
+++ b/.github/workflows/js-peer.yml
@@ -13,6 +13,9 @@ on:
 jobs:
   build-frontend:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: js-peer
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
