--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "format": "prettier --write src",
+    "lint": "prettier . --check && next lint",
     "tsc": "tsc --noEmit -p tsconfig.json",
     "protobuf": "protons src/lib/protobuf/*.proto"
   },
@@ -51,8 +52,17 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
+    "prettier": "3.4.2",
     "protons": "^7.6.0",
     "tailwindcss": "^3.4.3",
     "typescript": "5.4.5"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "printWidth": 120,
+    "tabWidth": 2,
+    "bracketSpacing": true
   }
 }
