--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -20,6 +20,7 @@
     "@libp2p/circuit-relay-v2": "^3.1.0",
     "@libp2p/identify": "^3.0.10",
     "@libp2p/interface-pubsub": "^4.0.1",
+    "@libp2p/kad-dht": "^14.2.5",
     "@libp2p/logger": "^5.1.3",
     "@libp2p/ping": "^2.0.10",
     "@libp2p/pubsub-peer-discovery": "^11.0.0",
