--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -34,7 +34,7 @@
     "it-pipe": "^3.0.1",
     "it-protobuf-stream": "^1.1.5",
     "libp2p": "^2.2.1",
-    "next": "14.2.13",
+    "next": "^14.2.24",
     "protons-runtime": "^5.5.0",
     "react": "18.3.1",
     "react-18-blockies": "^1.0.6",
