--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -19,8 +19,11 @@
     "@libp2p/bootstrap": "^11.0.10",
     "@libp2p/circuit-relay-v2": "^3.1.0",
     "@libp2p/identify": "^3.0.10",
+    "@libp2p/interface": "^2.5.0",
+    "@libp2p/interface-internal": "^2.3.0",
     "@libp2p/interface-pubsub": "^4.0.1",
     "@libp2p/logger": "^5.1.3",
+    "@libp2p/peer-id": "^5.0.12",
     "@libp2p/ping": "^2.0.10",
     "@libp2p/pubsub-peer-discovery": "^11.0.0",
     "@libp2p/webrtc": "^5.0.16",
@@ -29,17 +32,21 @@
     "@multiformats/multiaddr": "^12.3.1",
     "clsx": "^2.1.1",
     "debug": "^4.3.7",
+    "it-first": "^3.0.6",
     "it-length-prefixed": "^9.1.0",
     "it-map": "^3.1.1",
     "it-pipe": "^3.0.1",
     "it-protobuf-stream": "^1.1.5",
     "libp2p": "^2.2.1",
-    "next": "^14.2.24",
+    "multiformats": "^10.0.1",
+    "next": "^15.1.7",
     "protons-runtime": "^5.5.0",
     "react": "18.3.1",
     "react-18-blockies": "^1.0.6",
     "react-dom": "18.3.1",
+    "sha2": "link:multiformats/hashes/sha2",
     "uint8arrays": "^5.1.0",
+    "uint8arraylist": "^2.4.8",
     "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0"
   },
@@ -64,5 +71,10 @@
     "printWidth": 120,
     "tabWidth": 2,
     "bracketSpacing": true
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
