--- a/.github/workflows/js-peer.yml
+++ b/.github/workflows/js-peer.yml
@@ -11,7 +11,7 @@ on:
       - 'js-peer/**'
 
 jobs:
-  build-frontend:
+  build-and-deploy:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -24,3 +24,11 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run build
+      - uses: ipfs/ipfs-deploy-action@v1
+        name: Deploy to IPFS
+        id: deploy
+        with:
+          path-to-deploy: out
+          storacha-key: ${{ secrets.STORACHA_KEY }}
+          storacha-proof: ${{ secrets.STORACHA_PROOF }}
+          github-token: ${{ github.token }}
