--- a/.github/workflows/js-peer.yml
+++ b/.github/workflows/js-peer.yml
@@ -27,7 +27,7 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run build
-      - uses: ipfs/ipfs-deploy-action@v1
+      - uses: ipfs/ipfs-deploy-action@b53e2a8f5f8553d94c4ddcba56fdbe798c46dcfe
         name: Deploy to IPFS
         id: deploy
         with:
