--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -40,6 +40,7 @@
     "react-18-blockies": "^1.0.6",
     "react-dom": "18.3.1",
     "uint8arrays": "^5.1.0",
+    "universal-connectivity-browser": "file:",
     "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0"
   },
