--- a/dotnet-peer/dotnet-libp2p-chat/Chat.csproj
+++ b/dotnet-peer/dotnet-libp2p-chat/Chat.csproj
@@ -11,7 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.2" />
-    <PackageReference Include="Nethermind.Libp2p" Version="1.0.0-preview.2" />
+    <PackageReference Include="Nethermind.Libp2p" Version="1.0.0-preview.37" />
+    <PackageReference Include="Nethermind.Libp2p.Protocols.Pubsub" Version="1.0.0-preview.37" />
   </ItemGroup>
 
 </Project>
