--- a/rust-peer/Cargo.toml
+++ b/rust-peer/Cargo.toml
@@ -6,16 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0"
-clap = { version = "4.1.11", features = ["derive", "env"] }
-env_logger = "0.11.4"
-futures = "0.3.27"
-futures-timer = "3.0.2"
+anyhow = "1.0.97"
+async-trait = "0.1.88"
+clap = { version = "4.5.32", features = ["derive", "env"] }
+crossterm = "0.28.1"
+futures = "0.3.31"
+futures-timer = "3.0.3"
 libp2p = { version = "0.55", features = ["identify", "ping", "tokio", "gossipsub", "macros", "relay", "kad", "rsa", "ed25519", "quic", "request-response", "dns", "memory-connection-limits"] }
 libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio", "pem"] }
-log = "0.4.17"
 rand = "0.8.5"
-tokio = { version = "1.27.0", features = ["full"] }
-tokio-util = { version = "0.7", features = ["full"] }
-async-trait = "0.1.68"
+ratatui = "0.29.0"
+tokio = { version = "1.44.1", features = ["full"] }
+tokio-util = { version = "0.7.14", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 unsigned-varint = "0.8.0"
