--- a/rust-peer/Cargo.toml
+++ b/rust-peer/Cargo.toml
@@ -12,7 +12,7 @@ clap = { version = "4.5.32", features = ["derive", "env"] }
 crossterm = "0.28.1"
 futures = "0.3.31"
 futures-timer = "3.0.3"
-libp2p = { version = "0.55", features = ["identify", "ping", "tokio", "gossipsub", "macros", "relay", "kad", "rsa", "ed25519", "quic", "request-response", "dns", "memory-connection-limits"] }
+libp2p = { version = "0.55", features = ["identify", "ping", "tokio", "gossipsub", "macros", "relay", "kad", "rsa", "ed25519", "quic", "request-response", "dns", "memory-connection-limits", "tcp", "noise", "yamux"] }
 libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio", "pem"] }
 rand = "0.8.5"
 ratatui = "0.29.0"
