--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -39,6 +39,7 @@
     "react": "18.3.1",
     "react-18-blockies": "^1.0.6",
     "react-dom": "18.3.1",
+    "serve": "14.2.4",
     "uint8arrays": "^5.1.0",
     "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0"
