--- a/rust-peer/Cargo.toml
+++ b/rust-peer/Cargo.toml
@@ -16,6 +16,7 @@ libp2p = { version = "0.55", features = ["identify", "ping", "tokio", "gossipsub
 libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio", "pem"] }
 rand = "0.8.5"
 ratatui = "0.29.0"
+serde_json = "1.0.140"
 tokio = { version = "1.44.1", features = ["full"] }
 tokio-util = { version = "0.7.14", features = ["full"] }
 tracing = "0.1.41"
