fix: pin react-curse to 1.0.15
Somewhere between 1.0.15 and 1.0.22 react-curse broke the UI. There's
[no convenient overview](https://github.com/infely/react-curse/issues/100)
of changes so just pin it to the last working version while investigation
is ongoing.

--- a/node-js-peer/package.json
+++ b/node-js-peer/package.json
@@ -30,7 +30,7 @@
     "multiformats": "^13.3.2",
     "protons-runtime": "^5.5.0",
     "react": "^18.3.1",
-    "react-curse": "^1.0.0",
+    "react-curse": "1.0.15",
     "uint8arraylist": "^2.4.8"
   },
   "devDependencies": {
