--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -1,9 +1,9 @@
 name: go-peer ci
 
-on: 
+on:
   pull_request:
     paths:
-      - 'go-peer/**'
+      - "go-peer/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -13,8 +13,8 @@ jobs:
   go-check:
     uses: libp2p/uci/.github/workflows/go-check.yml@v0.0
     with:
-      go-version: '1.23.x'
+      go-version: "1.24.x"
   go-test:
     uses: libp2p/uci/.github/workflows/go-test.yml@v0.0
     with:
-      go-versions: '["1.23.x"]'
+      go-versions: '["1.24.x"]'
