--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -11,10 +11,10 @@ concurrency:
 
 jobs:
   go-check:
-    uses: libp2p/uci/.github/workflows/go-check.yml@v0.0
+    uses: ipdxco/unified-github-workflows/.github/workflows/go-check.yml@v0.0
     with:
       go-version: '1.23.x'
   go-test:
-    uses: libp2p/uci/.github/workflows/go-test.yml@v0.0
+    uses: ipdxco/unified-github-workflows/.github/workflows/go-test.yml@v0.0
     with:
       go-versions: '["1.23.x"]'
